[gd_scene load_steps=5 format=3 uid="uid://bbu0k3jh6corf"]

[ext_resource type="Script" path="res://Scripts/BackBoardScript.gd" id="2_a5ffc"]
[ext_resource type="Script" path="res://Scripts/BoardScript.gd" id="3"]
[ext_resource type="Script" path="res://Scenes/select_product.gd" id="3_2dnat"]
[ext_resource type="Script" path="res://Scenes/select_genre.gd" id="4_mevif"]

[node name="BoardScene" type="Node2D"]
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Back" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1672.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 128.0
text = "BACK"
script = ExtResource("2_a5ffc")

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 832.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 104.0
text = "ENTER NAME"

[node name="Start_build_game" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 832.0
offset_top = 896.0
offset_right = 1088.0
offset_bottom = 960.0
text = "START BUILD"

[node name="select_product" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 832.0
offset_top = 192.0
offset_right = 1088.0
offset_bottom = 232.0
script = ExtResource("3_2dnat")

[node name="select_genre" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 832.0
offset_top = 320.0
offset_right = 1088.0
offset_bottom = 360.0
script = ExtResource("4_mevif")

[connection signal="pressed" from="Panel/Back" to="Panel/Back" method="_on_pressed"]
[connection signal="pressed" from="Panel/Start_build_game" to="." method="_on_Start_build_game_pressed"]
[connection signal="item_selected" from="Panel/select_product" to="." method="_on_select_product_item_selected"]
